; ModuleID = '/home/carl/AnghaBench/qmk_firmware/drivers/avr/extr_i2c_slave.c_i2c_slave_init.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/drivers/avr/extr_i2c_slave.c_i2c_slave_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TWAR = common dso_local global i32 0, align 4
@TWIE = common dso_local global i32 0, align 4
@TWEA = common dso_local global i32 0, align 4
@TWINT = common dso_local global i32 0, align 4
@TWEN = common dso_local global i32 0, align 4
@TWCR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @i2c_slave_init(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  store i32 %3, i32* @TWAR, align 4
  %4 = load i32, i32* @TWIE, align 4
  %5 = shl i32 1, %4
  %6 = load i32, i32* @TWEA, align 4
  %7 = shl i32 1, %6
  %8 = or i32 %5, %7
  %9 = load i32, i32* @TWINT, align 4
  %10 = shl i32 1, %9
  %11 = or i32 %8, %10
  %12 = load i32, i32* @TWEN, align 4
  %13 = shl i32 1, %12
  %14 = or i32 %11, %13
  store i32 %14, i32* @TWCR, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
